SearchResponseTests now passing. Some cleanup left